--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -24,6 +24,7 @@
             android:background="@drawable/rounded_edittext"
             android:hint="Your location"
             android:padding="14dp"
+            android:hint="Your location"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:hint="Destination"
             android:background="@drawable/rounded_edittext"
             android:hint="Your location"
             android:padding="14dp"
